# token-price-calculator

./: .gitignore  Cargo.toml  README.md  calculator
.github/workflows/: build-artifacts.yml  release.yml
src/: helpers.rs  main.rs  prices.rs
src/cost/: mod.rs
