[package]
name = "token_calculator"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
inquire = "0.7.0"
num-format = "0.4.4"

[[bin]]
name = "calculator"
path = "src/main.rs"
